<resources>
    <string name="app_name">LoginApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="account">Account</string>
    <string name="can_not_be_blank">This field can not be blank</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="image_type">image/*</string>
    <string name="authority">com.dmitrysukhov.loginapp.fileprovider</string>
    <string name="update">Update</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="password_must_contain">Password must contain English letters and numbers and be 8–16 characters long</string>
    <string name="login_must_contain">Login must contain lowercase English letters and numbers.</string>
</resources>